LINE連携のための受け皿作成

--- a/web.config
+++ b/web.config
@@ -6,15 +6,15 @@
     </handlers>
 
     <httpPlatform 
-        processPath="C:\work\myappli\aikouenkai_project\venv\Scripts\python.exe"
-        arguments="-m waitress --port=%HTTP_PLATFORM_PORT% aikouenkai_project.wsgi:application"
+        processPath="C:\work\myappli\jichidantai_project\venv\Scripts\python.exe"
+        arguments="-m waitress --port=%HTTP_PLATFORM_PORT% core.wsgi:application"
         stdoutLogEnabled="true"
         stdoutLogFile=".\python.log"
         startupTimeLimit="60"
         processesPerApplication="1">
       
       <environmentVariables>
-        <environmentVariable name="PYTHONPATH" value="C:\work\myappli\aikouenkai_project" />
+        <environmentVariable name="PYTHONPATH" value="C:\work\myappli\jichidantai_project" />
       </environmentVariables>
     </httpPlatform>
   </system.webServer>
